--- a/src/nm.ipynb
+++ b/src/nm.ipynb
@@ -39,12 +39,12 @@
    "outputs": [],
    "source": [
     "# r = imageio.imread(str(input()).rstrip())\n",
-    "r = imageio.imread(str(\"/home/ava/documents/classes/nm/NormalMapping/images/Bikesgray.jpg\").rstrip()).astype(np.uint8)"
+    "r = imageio.imread(str(\"/home/ava/documents/classes/nm/NormalMapping/images/bikesgray.jpg\").rstrip()).astype(np.uint8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "(-0.5, 639.5, 479.5, -0.5)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -207,7 +207,7 @@
        "(-0.5, 639.5, 479.5, -0.5)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "(-0.5, 639.5, 479.5, -0.5)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -285,6 +285,33 @@
     "plt.subplot(133)\n",
     "plt.imshow(normal[:,:,2], cmap=\"Blues\", vmin=0, vmax=255)\n",
     "plt.axis('off')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bibliography\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Normal_mapping\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Lambertian_reflectance\n",
+    "\n",
+    "https://cpetry.github.io/NormalMap-Online/\n",
+    "\n",
+    "https://www.quora.com/How-are-normal-maps-made\n",
+    "\n",
+    "https://stackoverflow.com/questions/13983189/opengl-how-to-calculate-normals-in-a-terrain-height-grid/13983431#13983431\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Von_Neumann_neighborhood\n",
+    "\n",
+    "https://azgaar.wordpress.com/2018/02/26/image-converter/\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Sobel_operator\n",
+    "\n",
+    "http://homepages.inf.ed.ac.uk/rbf/HIPR2/sobel.htm\n",
+    "\n",
+    "K. Engel (2006). Real-time volume graphics."
    ]
   }
  ],
