--- a/src/nm.ipynb
+++ b/src/nm.ipynb
@@ -447,18 +447,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51a86821aa5643b9b551cd964da94f85",
+       "model_id": "1a993b3b4cf54efbbd631805371fbd26",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=2.5, description='strength', max=7.5, min=-2.5), FloatSlider(value=7.0…"
+       "interactive(children=(FloatSlider(value=2.5, description='strength', max=5.0, min=0.01, step=0.01), FloatSlide…"
       ]
      },
      "metadata": {},
@@ -467,16 +467,16 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.apply_sobel(strength, level)>"
+       "<function __main__.apply_sobel(strength=2.5, level=12.8)>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def apply_sobel(strength, level):\n",
+    "def apply_sobel(strength=data['settings']['strength'], level=data['settings']['level']):\n",
     "    \n",
     "    data['settings']['strength'] = strength\n",
     "    data['settings']['level'] = level\n",
@@ -510,8 +510,8 @@
     "\n",
     "\n",
     "interact(apply_sobel,\n",
-    "         strength=data['settings']['strength'],\n",
-    "         level=data['settings']['level'])"
+    "         strength=(0.01,5.00,0.01),\n",
+    "         level=(4.0,10.0,0.1))"
    ]
   },
   {
@@ -702,7 +702,7 @@
     "Here you can see some of our results applyed to a plane in 3d space in blender, and its rendering.\n",
     "\n",
     "The spotlight is surounding the flat surface, and it reflects according to the normal map.\n",
-    "\n",
+    "![](https://raw.githubusercontent.com/vitorgt/NormalMapping/master/images/eye.jpeg)\n",
     "![](https://raw.githubusercontent.com/vitorgt/NormalMapping/master/images/eye_rendered.gif)\n",
     "![](https://raw.githubusercontent.com/vitorgt/NormalMapping/master/images/blender_screen2.gif)"
    ]
